2008-02-11  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.15.5 ===

2008-02-11  Matthias Clasen <mclasen@redhat.com>

	* gio.symbols: Add g_mount_mount_flags_get_type.

2008-02-11  Alexander Larsson  <alexl@redhat.com>

        * gfileinfo.c:
        (g_file_info_set_attribute_mask):
        (g_file_attribute_matcher_matches_id):
	Correctly handle NULL GAttributeMatcher meaning
	matches nothing. (Fixes #513492)

2008-02-11  Alexander Larsson  <alexl@redhat.com>

        * gfile.[ch]:
        * gmount.[ch]:
        * gvolume.[ch]:
	Added GMountMountFlags enum and added a flags
	argument to all mount calls.
	
	This is an API/ABI change for future extensibility,
	as I think we will need at least an
	inhibit-autorun flag (the panel needs this).
	There are no flags defined yet though.

2008-02-11  Alexander Larsson  <alexl@redhat.com>

	* gfileinfo.h:
	Added new standard::description attribute.
	Requested by Vincent, and useful for both
	panel and nautilus

2008-02-11  Alexander Larsson  <alexl@redhat.com>

        * gdesktopappinfo.c:
	Minor docs cleanup

2008-02-11  Matthias Clasen <mclasen@redhat.com>

	* *.c: Documentation additions

2008-02-10  Matthias Clasen <mclasen@redhat.com>

	* gappinfo.h: Formatting cleanup
	* gappinfo.c: Fix up docs.

2008-02-09  Matthias Clasen <mclasen@redhat.com>

	* gunixmounts.c: Consistently use getmntent_r() and fall
	back to getmntent().  (#515492)

2008-02-09  Matthias Clasen <mclasen@redhat.com>

	* gbufferedinputstream.c:
	* ginputstream.c:
	* goutputstream.c: Use G_STRFUNC instead of __FUNCTION__.

	* tests/data-input-stream.c:
	* tests/data-output-stream.c: Portability fixes.

2008-02-08  Alexander Larsson  <alexl@redhat.com>

	* gio.symbols: 
        * gunixvolume.c:
        * gvolume.[ch]:
        Add g_volume_should_automount.
	Docs needed.

2008-02-07  Tor Lillqvist  <tml@novell.com>

	* tests/Makefile.am (TEST_PROGS): live-g-file won't build on
	Win32, too Unix-specific.
