@@ -1,3 +1,8 @@
+2008-02-12  Alexander Larsson  <alexl@redhat.com>
+
+        * tests/live-g-file.c:
+	C89 fixes (#515892)
+
 2008-02-11  Matthias Clasen <mclasen@redhat.com>
 
 	* === Released 2.15.5 ===
